# bat.external

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
BAT2CPP/: BAT2.cpp  BAT2.hpp  Makefile  julia-cpp-impl.hpp  julia-cpp.cpp  julia-cpp.hpp  main.cpp  shell.nix
BAT2CPP/BATCPP.jl/: LICENSE.md  README.md
BAT2CPP/BATCPP.jl/src/: BATCPP.jl
BAT2CPP/BATCPP.jl/test/: runtests.jl
BAT2CPP/nix/julia-packages/BAT/: version.nix
BAT2CPP/nix/julia-packages/Clustering/: version.nix
BAT2CPP/nix/julia-packages/Colors/: version.nix
BAT2CPP/nix/julia-packages/Compat/: version.nix
BAT2CPP/nix/julia-packages/Distributions/: version.nix
BAT2CPP/nix/julia-packages/DoubleDouble/: version.nix
BAT2CPP/nix/julia-packages/ElasticArrays/: version.nix
BAT2CPP/nix/julia-packages/FunctionWrappers/: version.nix
BAT2CPP/nix/julia-packages/IntervalSets/: version.nix
bat-kt/: build.gradle
c-base/: CMakeLists.txt  build.gradle  gradle.properties
c-base/src/main/c/: builders.c  builders.h  (+3 more)
docs/: Overview.pptx  bayes.md  models.md  parameters.h  tasks.md  transport.md
docs/diagrams/: parameters.vsdx
docs/src/: Makefile  bayes.tex
docs/src/bib/: CS.bib  MCMC.bib  bayes.bib  books.bib
docs/usecases/: Makefile  integration.md  problems-set.tex  problems.md
kt-base/: build.gradle
kt-jvm/: build.gradle
kt-native/: build.gradle
kt-server/: build.gradle
toy-language/: LICENSE  toy-language.cabal
toy-language/BAT/: AST.hs  Algorithms.hs  Typecheck.hs  Types.hs
toy-language/BAT/Interpreter/: MH.hs
toy-language/exe/: simple1.hs  simple2.hs
(+34 files in other folders)
